# music-library-orchestrator-bpm

./: .gitignore  README.md  archive.py  audio_utils.py  bpm_organizer.py  bpm_ui.py  csv_store.py  pipeline.py  pyproject.toml
data/: library.csv
src/music_tapper/: pipeline.py
src/music_tapper/utils/: archive.py  audio_utils.py  bpm_ui.py
