[project]
name = "music-tapper"
version = "0.1.0"
description = "Download, tag, and organize MP3 files from archive.org"
authors = [
    {name = "Marc", email = "m4rklar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

packages = [
    { include = "music_tapper", from = "src" }
]

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry.scripts]
music-tapper = "music_tapper.pipeline:main"